# binsignal

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
binsignal/: CMakeLists.txt
binsignal/include/: BinarySignal.h  SignalState.h
binsignal/source/: BinarySignal.cpp  SignalState.cpp
dialogue/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  testing.cpp
utils/: CMakeLists.txt  GetNum.h
